--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 
 <body>
-    <p>
-        This template is needed to start up with webpack!
-    </p>
+  <section class="container">
+    <article class="main-form">
+
+    </article>
+  </section>
     <script src="/js/bundle.js"></script>
 </body>
 
