CSS module structure is destroyed

--- a/js/index_hidden.html
+++ b/js/index_hidden.html
@@ -55,7 +55,7 @@
             </div>
         </article>
     </section>
-    <script src="/js/bundle.js"></script>
+    <script src="bundle.js"></script>
 </body>
 
 </html>
