React partly implemented

--- a/src/index.html
+++ b/src/index.html
@@ -36,21 +36,21 @@
                     </div>
                     <div class="view-controls__form__item view-controls__form--card">
                       <label class="view-controls__form__item--label" for="card">Credit card number</label>
-                      <input class="view-controls__form__item--input" type="text" id="card" name="card_number" value="">
+                      <input class="view-controls__form__item--input bordered-input" type="text" id="card" name="card_number" value="">
                     </div>
                     <div class="view-controls__form__item view-controls__form--date">
                       <label class="view-controls__form__item--label" for="expiration">Expiration</label>
-                      <input class="view-controls__form__item--input view-controls__form__item__date--input" type="text" id="expiration" name="card_number" value="">
-                      <input class="view-controls__form__item--input view-controls__form__item__date--input" type="text" id="expiration" name="card_number" value="">
+                      <input class="view-controls__form__item--input view-controls__form__item__date--input bordered-input" type="text" id="expiration" name="card_number" value="">
+                      <input class="view-controls__form__item--input view-controls__form__item__date--input bordered-input" type="text" id="expiration" name="card_number" value="">
                     </div>
                     <div class="view-controls__form__item view-controls__form--cvc">
                       <label class="view-controls__form__item--label" for="cvc-cw">CVC/CW</label>
-                      <input class="view-controls__form__item--input view-controls__form__item__cvc--input" type="text" id="cvc-cw" name="card_number" value="">
+                      <input class="view-controls__form__item--input view-controls__form__item__cvc--input bordered-input" type="text" id="cvc-cw" name="card_number" value="">
                       <p class="view-controls__form__item__cvc--text left-text">3 or 4 digits code</p>
                     </div>
                     <input class="view-controls__form__item--submit" type="submit" name="name" value="Pay Now">
                   </form>
-
+                  
                 <div class="view-controls__readressing">
                     <p class="view-controls__readressing--text centered-text">or select other payment method</p>
                     <a class="view-controls__readressing--link centered-text" href="#"> <span class="view-controls__readressing--link-text">Pay with</span> </a>
@@ -60,6 +60,7 @@
         </article>
         <!-- PaymentDashComponent END-->
     </section>
+    <div id="root"></div>
     <script src="main.js"></script>
 </body>
 
